@@ -14,6 +14,8 @@ Bugfixes:
 - pause near end of buffered streams works as expected (Jira APPSERVER-199)
 - fixed potential memory leak with RTMPT connections that are not properly
   closed (Jira APPSERVER-193)
+- "onMetaData" is only written to newly recorded FLV files and contains
+  valid properties now
 
 
 Red5 0.6.3  (2007-09-17)
